welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: value Est is not a member of object plm.universe.Direction
  if(Direction.Est){
               ^