welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var x:Int=0
  baisseBrosse()
  for(i <-1 to 6){
    avance()
  }
  
  if(Direction.Est){
    gauche()
  } else {
    droite()
  }
  
}